# EyeNav

./: README.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
server/: Dockerfile  pyproject.toml  requirements.txt
server/src/: app.py  test.py
server/src/core/: __init__.py  blink_detector.py  gaze_interpreter.py  iris_detector.py  mediapipe_tracker.py
server/src/libs/: __init__.py  face.py
server/src/utils/: helpers.py  logger.py
